--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
         </div>
         
     </main>
-    <footer>h
-
+    <footer>
         <div>
             <p id="dev">Desenvolvido por Pedro Lucas Martins da Silva</p>
         </div>
