--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav id="menubar">
                 <a href="#">Início</a>
                 <a href="#">Projetos</a>
-                <a href="Pedro Lucas Martins da Silva.pdf"  target="_blank" rel="external">Curriculo</a>
+                <a href="Pedro Lucas Martins da Silva.pdf"  target="_blank" rel="external">Currículo</a>
             </nav>
         </div>
     </header>
@@ -31,6 +31,7 @@
                         <li><a href="https://www.linkedin.com/in/pedro-lucas-martins-da-silva-387791253" target="_blank" rel="external">LinkedIn</a></li>
                         <li><a href="https://lattes.cnpq.br/4190698781910245" target="_blank" rel="external">Lattes</a></li>
                         <li><a href="https://github.com/jip8" target="_blank" rel="external">GitHub</a></li>
+                        <li><a href="https://wa.me/5555997011177" target="_blank" rel="external">WhatsApp</a></li>
                         <li>E-mail:<a href="mailto:pedro.lm.silva@hotmail.com">pedro.lm.silva@hotmail.com</a></li>  
                     </ul>
             </div>
